--- a/deploy/roles/cometbft/tasks/main.yml
+++ b/deploy/roles/cometbft/tasks/main.yml
@@ -24,7 +24,7 @@
   template:
     src: "{{ item }}"
     dest: "{{ cometbft_target_dir }}/config/{{ item | basename }}"
-  loop: "{{ lookup('fileglob', playbook_dir + '/roles/cometbft/templates/*', wantlist=True) }}"
+  loop: "{{ lookup('fileglob', playbook_dir + '/roles/cometbft/templates/config/*', wantlist=True) }}"
 
 # - name: Ensure host dirs owned by deploy
 #   file:
@@ -46,7 +46,8 @@
     env:
       HOME: /app
     ports:
-      # - "127.0.0.1:{{ host_port }}:26656"
+      # ufw rules
+      - "127.0.0.1:{{ host_port }}:26656"
       # - "127.0.0.1:{{ host_port }}:26657"
       # - "127.0.0.1:{{ host_port }}:26658"
     volumes:
@@ -59,7 +60,7 @@
     driver: bridge
     state: present
 
-- name: Connect Postgres and Dango containers to backend network
+- name: Connect Cometbft container to backend network
   community.docker.docker_network:
     name: backend
     state: present
