--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -50,12 +50,6 @@
     dest: "{{ dango_target_dir }}"
     mode: '0644'
 
-- name: Ensure backend network exists
-  community.docker.docker_network:
-    name: backend
-    driver: bridge
-    state: present
-
 - name: Deploy dango container
   docker_container:
     name: dango
@@ -72,11 +66,23 @@
       SENTRY__DSN: "https://your-dsn-here"
       SENTRY__ENVIRONMENT: "production"
     ports:
-      - "127.0.0.1:8080:8080"
-      # - "127.0.0.1:26658:26658"
+      - "8080:8080"
+      - "26656:26656"
     volumes:
       - "{{ dango_target_dir }}:/app/.dango"
     tty: true
+
+- name: Allow TCP ports
+  become: true
+  become_user: root
+  ufw:
+    rule: allow
+    direction: in
+    port: "{{ item }}"
+    proto: tcp
+  loop:
+    - 8080
+    - 26656
 
 - name: Ensure backend network exists
   community.docker.docker_network:
@@ -84,7 +90,7 @@
     driver: bridge
     state: present
 
-- name: Connect Postgres and Dango containers to backend network
+- name: Connect Dango containers to backend network
   community.docker.docker_network:
     name: backend
     state: present
