--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,7 @@ on:
       - "develop"
     paths:
       - ".github/workflows/rust.yml"
+      - "deploy/**"
       - "dango/**"
       - "grug/**"
       - "hyperlane/**"
@@ -26,6 +27,7 @@ on:
       - "*"
     paths:
       - ".github/workflows/rust.yml"
+      - "deploy/**"
       - "dango/**"
       - "grug/**"
       - "hyperlane/**"
