--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -207,9 +207,9 @@ jobs:
 
       - name: Set GIT_COMMIT
         run: |
-          cp dango/cli/src/git_info.rs dango/cli/src/git_info.rs.in
-          sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
-          rm dango/cli/src/git_info.rs.in
+          cp grug/app/src/git_info.rs grug/app/src/git_info.rs.in
+          sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" grug/app/src/git_info.rs.in > grug/app/src/git_info.rs
+          rm grug/app/src/git_info.rs.in
 
       - uses: docker/setup-buildx-action@v3
 
