--- a/.github/workflows/cometbft.yaml
+++ b/.github/workflows/cometbft.yaml
@@ -25,11 +25,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - id: check
+      - name: Check for docker image
+        id: check
         run: |
           if docker manifest inspect ghcr.io/${{ github.repository }}/cometbft:${{ env.COMETBFT_GIT_TAG }} > /dev/null 2>&1; then
+            echo "skip building"
             echo "skip_build=true" >> $GITHUB_OUTPUT
           else
+            echo "building"
             echo "skip_build=false" >> $GITHUB_OUTPUT
           fi
 
