--- a/deploy/justfile
+++ b/deploy/justfile
@@ -20,7 +20,10 @@ install-runners:
   source .venv/bin/activate && ansible-playbook install-github-runner-hosts.yml
 
 deploy-dango:
-  ansible-playbook dango.yml
+  ansible-playbook dango.yml --skip-tags setup
+
+setup-deploy-dango:
+  ansible-playbook dango.yml --tags setup
 
 deploy-cometbft:
   ansible-playbook cometbft.yml
