--- a/deploy/roles/cometbft/tasks/main.yml
+++ b/deploy/roles/cometbft/tasks/main.yml
@@ -34,6 +34,12 @@
 #     group: "{{ ansible_user_gid }}"
 #     recurse: yes
 
+- name: Ensure backend network exists
+  community.docker.docker_network:
+    name: backend
+    driver: bridge
+    state: present
+
 - name: Deploy cometbft container
   docker_container:
     name: cometbft
@@ -52,18 +58,6 @@
       # - "127.0.0.1:{{ host_port }}:26658"
     volumes:
       - "{{ cometbft_target_dir }}:/app/.cometbft"
+    networks:
+      - name: backend
     tty: true
-
-- name: Ensure backend network exists
-  community.docker.docker_network:
-    name: backend
-    driver: bridge
-    state: present
-
-- name: Connect Cometbft container to backend network
-  community.docker.docker_network:
-    name: backend
-    state: present
-    connected:
-      - cometbft
-    appends: yes
