--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -1,4 +1,5 @@
 - name: Install nginx as a proxy
+  tags: setup
   become: true
   become_user: root
   apt:
@@ -6,6 +7,7 @@
     state: present
 
 - name: Install psycopg2 so Ansible can talk to Postgres
+  tags: setup
   become: true
   become_user: root
   apt:
@@ -13,6 +15,7 @@
     state: present
 
 - name: Create Dango DB user
+  tags: setup
   community.postgresql.postgresql_user:
     name: "{{ dango_db_user }}"
     password: "{{ dango_db_password }}"
@@ -23,6 +26,7 @@
     state: present
 
 - name: Create Dango production database
+  tags: setup
   community.postgresql.postgresql_db:
     name: "{{ dango_db_name }}"
     owner: "{{ dango_db_user }}"
@@ -33,6 +37,7 @@
     state: present
 
 - name: Grant ALL privileges on the Dango database to the Dango user
+  tags: setup
   community.postgresql.postgresql_privs:
     type: database
     privs: ALL
@@ -45,10 +50,31 @@
     state: present
 
 - name: Copy all files from dango role
+  tags: setup
   copy:
     src: "{{ playbook_dir }}/roles/dango/files/config"
     dest: "{{ dango_target_dir }}"
     mode: '0644'
+
+- name: Ensure backend network exists
+  tags: setup
+  community.docker.docker_network:
+    name: backend
+    driver: bridge
+    state: present
+
+- name: Allow TCP ports
+  tags: setup
+  become: true
+  become_user: root
+  ufw:
+    rule: allow
+    direction: in
+    port: "{{ item }}"
+    proto: tcp
+  loop:
+    - 8080
+    - 26656
 
 - name: Deploy dango container
   docker_container:
@@ -70,30 +96,7 @@
       - "26656:26656"
     volumes:
       - "{{ dango_target_dir }}:/app/.dango"
+    networks:
+      - name: backend
     tty: true
 
-- name: Allow TCP ports
-  become: true
-  become_user: root
-  ufw:
-    rule: allow
-    direction: in
-    port: "{{ item }}"
-    proto: tcp
-  loop:
-    - 8080
-    - 26656
-
-- name: Ensure backend network exists
-  community.docker.docker_network:
-    name: backend
-    driver: bridge
-    state: present
-
-- name: Connect Dango containers to backend network
-  community.docker.docker_network:
-    name: backend
-    state: present
-    connected:
-      - dango
-    appends: yes
