--- a/deploy/roles/postgres/tasks/main.yml
+++ b/deploy/roles/postgres/tasks/main.yml
@@ -18,6 +18,12 @@
       - db_password | length > 0
     fail_msg: "DB_PASSWORD must be set and non-empty, aborting deployment."
 
+- name: Ensure backend network exists
+  community.docker.docker_network:
+    name: backend
+    driver: bridge
+    state: present
+
 - name: run Postgres container as deploy
   community.docker.docker_container:
     name: "{{ container_name }}"
@@ -27,23 +33,11 @@
       POSTGRES_PASSWORD: "{{ db_password }}"
     volumes:
       - "{{ data_dir }}:/var/lib/postgresql/data"
+    networks:
+      - backend
     published_ports:
       - "127.0.0.1:{{ host_port }}:5432"
     restart_policy: unless-stopped
     state: started
   become: true
   become_user: "{{ deploy_user }}"
-
-- name: Ensure backend network exists
-  community.docker.docker_network:
-    name: backend
-    driver: bridge
-    state: present
-
-- name: Connect Postgres and Dango containers to backend network
-  community.docker.docker_network:
-    name: backend
-    state: present
-    connected:
-      - postgres
-    appends: yes
