--- a/deploy/roles/users/tasks/main.yml
+++ b/deploy/roles/users/tasks/main.yml
@@ -35,6 +35,13 @@
     ssh_key_path: "{{ item }}.pub"
   with_items: "{{ ssh_users }}"
 
+- name: Copy ssh keys for deploy user
+  authorized_key:
+    user: "{{ deploy_user }}"
+    ssh_key_path: "deploy.pub"
+    state: present
+    key: "{{ lookup('file', 'authorized_keys/' ~ ssh_key_path) }}"
+
 - name: Ensure .ssh directory exists for deploy_user
   file:
     path: "/home/{{ deploy_user }}/.ssh"
