--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -288,16 +288,15 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install Ansible & Docker SDK
-        run: pip install ansible community.docker
       - name: Start SSH agent
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Install Ansible & Docker SDK
+        run: |
+          pipx install ansible
+          cd deploy
+          ansible-galaxy collection install -r requirements.yml
       - name: Run Ansible playbook
         run: |
           cd deploy
