--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -296,6 +296,7 @@ jobs:
         run: |
           pipx install ansible
           pipx ensurepath
+          ln -f -s ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
           cd deploy
           ansible-galaxy collection install -r requirements.yml
       - name: Run Ansible playbook
