--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -292,6 +292,8 @@ jobs:
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Ensure ~/.local/bin is in PATH
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Install Ansible & Docker SDK
         run: |
           pipx install ansible
