--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -288,6 +288,11 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@v4
+      - name: Fail if DEPLOY_KEY is not set
+        if: ${{ secrets.DEPLOY_KEY == '' }}
+        run: |
+          echo "Missing DEPLOY_KEY secret"
+          exit 1
       - name: Start SSH agent
         uses: webfactory/ssh-agent@v0.7.0
         with:
