--- a/deploy/tailscale.yml
+++ b/deploy/tailscale.yml
@@ -4,4 +4,5 @@
     - role: artis3n.tailscale
       vars:
         tailscale_authkey: "{{ lookup('env', 'TAILSCALE_AUTHKEY') }}"
-        tailscale_args: "--ssh"
+        # That raises issues with automatic deployment
+        # tailscale_args: "--ssh"
