--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -281,7 +281,7 @@ jobs:
           fi
 
   deploy-dango:
-    # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     permissions:
       packages: read
     needs: [push-manifest]
