--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -47,6 +47,7 @@ chrono                = { workspace = true }
 criterion             = { workspace = true }
 dango-account-factory = { workspace = true, features = ["library"] }
 dango-auth            = { workspace = true }
+dango-gateway         = { workspace = true, features = ["library"] }
 dango-httpd           = { workspace = true }
 dango-lending         = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
