refactor(dango): improve constants, genesis, and tests (#686)
* add constants to hyperlane-types, pyth-types, and dango-types

* update

* update

* update

* fix

* update

* update auth test

* update

* genesis_opt as param

* change MockValidatorSets to a hash map

* update

* update

* update

* create a separate hyperlane-testing crate

* update

* move `Codes` trait back to dango-genesis

* update

* updates

* update

* update

* update nonce test

* update va test

* update

* update pyth handler test

* update proposal preparer test

* update session key test

* update oracle tests

* update indexer test

* update httpd tests

* update taxman tests

* fix: use static instead of const for `LazyLock`s

* fix

* refactor: lending tests to use TestOption

* refactor: margin tests to use TestOption

* update multisig tests

* partially update dex tests (not all work yet)

* make lending test compile (not passing yet)

* update warp send/receive tests

* new spot account to claim deposit from gateway instead of from warp

* extract hyperlane test suite to testing library

* update account factory tests

* better error handling in hyperlane test suite

* split rate limit test to a new `gateway.rs` file`

* update gateway tests

* revert Coin::new

* make benchmark compile

* add a comment

* test(dango): fix dex tests after introduction of TestOptions

* rename a test

* make margin tests work by giving user1 20 ETH in genesis

* remove an unused dependency

* fix a typo

---------

Co-authored-by: Rhaki <86773669+Rhaki@users.noreply.github.com>
Co-authored-by: Sturdy <91910406+apollo-sturdy@users.noreply.github.com>
Co-authored-by: Pacman <pacman@apollo.farm>

--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -27,6 +27,7 @@ grug-vm-hybrid          = { workspace = true }
 grug-vm-rust            = { workspace = true }
 grug-vm-wasm            = { workspace = true }
 hex-literal             = { workspace = true }
+hyperlane-testing       = { workspace = true }
 hyperlane-types         = { workspace = true }
 indexer-httpd           = { workspace = true }
 indexer-sql             = { workspace = true, features = ["tracing"] }
@@ -41,15 +42,18 @@ sha2                    = { workspace = true }
 [dev-dependencies]
 anyhow                = { workspace = true }
 assertor              = { workspace = true }
+bip32                 = { workspace = true }
+chrono                = { workspace = true }
 criterion             = { workspace = true }
 dango-account-factory = { workspace = true, features = ["library"] }
 dango-auth            = { workspace = true }
 dango-bank            = { workspace = true, features = ["library"] }
+dango-gateway         = { workspace = true, features = ["library"] }
 dango-httpd           = { workspace = true }
 dango-lending         = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
-dango-types           = { workspace = true }
-dango-warp            = { workspace = true, features = ["library"] }
+hex                   = { workspace = true }
+home                  = { workspace = true }
 indexer-disk-saver    = { workspace = true }
 indexer-testing       = { workspace = true }
 proptest              = { workspace = true }
