refactor(dango): gateway (#672)
* extract alloy to a new contract

* add comments

* rename alloy to gateway

* redesign the gateway contract

* add rate limit logic to gateway

* rename msg to msgs

* add withdrawal fee logic to gateway

* remove gateway functionalities from warp

* add an empty line

* burn alloyed tokens on transfer remote

* fix

* refactor(dango): improve constants, genesis, and tests (#686)

* add constants to hyperlane-types, pyth-types, and dango-types

* update

* update

* update

* fix

* update

* update auth test

* update

* genesis_opt as param

* change MockValidatorSets to a hash map

* update

* update

* update

* create a separate hyperlane-testing crate

* update

* move `Codes` trait back to dango-genesis

* update

* updates

* update

* update

* update nonce test

* update va test

* update

* update pyth handler test

* update proposal preparer test

* update session key test

* update oracle tests

* update indexer test

* update httpd tests

* update taxman tests

* fix: use static instead of const for `LazyLock`s

* fix

* refactor: lending tests to use TestOption

* refactor: margin tests to use TestOption

* update multisig tests

* partially update dex tests (not all work yet)

* make lending test compile (not passing yet)

* update warp send/receive tests

* new spot account to claim deposit from gateway instead of from warp

* extract hyperlane test suite to testing library

* update account factory tests

* better error handling in hyperlane test suite

* split rate limit test to a new `gateway.rs` file`

* update gateway tests

* revert Coin::new

* make benchmark compile

* add a comment

* test(dango): fix dex tests after introduction of TestOptions

* rename a test

* make margin tests work by giving user1 20 ETH in genesis

* remove an unused dependency

* fix a typo

---------

Co-authored-by: Rhaki <86773669+Rhaki@users.noreply.github.com>
Co-authored-by: Sturdy <91910406+apollo-sturdy@users.noreply.github.c

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "dango/cli",
   "dango/client",
   "dango/dex",
+  "dango/gateway",
   "dango/genesis",
   "dango/httpd",
   "dango/indexer/sql",
@@ -38,6 +39,7 @@ members = [
   "grug/vm/*",
   "hyperlane/isms/*",
   "hyperlane/mailbox",
+  "hyperlane/testing",
   "hyperlane/va",
   "indexer/*",
   "pyth/client",
@@ -165,6 +167,7 @@ dango-auth                  = { path = "dango/auth" }
 dango-bank                  = { path = "dango/bank" }
 dango-client                = { path = "dango/client" }
 dango-dex                   = { path = "dango/dex" }
+dango-gateway               = { path = "dango/gateway" }
 dango-genesis               = { path = "dango/genesis" }
 dango-httpd                 = { path = "dango/httpd" }
 dango-ibc-transfer          = { path = "dango/ibc-transfer" }
@@ -203,6 +206,7 @@ grug-vm-rust                = { path = "grug/vm/rust" }
 grug-vm-wasm                = { path = "grug/vm/wasm" }
 hyperlane-ism               = { path = "hyperlane/isms/multisig" }
 hyperlane-mailbox           = { path = "hyperlane/mailbox" }
+hyperlane-testing           = { path = "hyperlane/testing" }
 hyperlane-types             = { path = "hyperlane/types" }
 hyperlane-va                = { path = "hyperlane/va" }
 indexer-client              = { path = "indexer/client" }
