--- a/dango/genesis/Cargo.toml
+++ b/dango/genesis/Cargo.toml
@@ -17,6 +17,7 @@ dango-account-multi   = { workspace = true, features = ["library"] }
 dango-account-spot    = { workspace = true, features = ["library"] }
 dango-bank            = { workspace = true, features = ["library"] }
 dango-dex             = { workspace = true, features = ["library"] }
+dango-gateway         = { workspace = true, features = ["library"] }
 dango-lending         = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
 dango-taxman          = { workspace = true, features = ["library"] }
@@ -24,16 +25,12 @@ dango-types           = { workspace = true }
 dango-vesting         = { workspace = true, features = ["library"] }
 dango-warp            = { workspace = true, features = ["library"] }
 grug                  = { workspace = true }
+grug-vm-hybrid        = { workspace = true }
+grug-vm-rust          = { workspace = true }
+grug-vm-wasm          = { workspace = true }
 hyperlane-ism         = { workspace = true, features = ["library"] }
 hyperlane-mailbox     = { workspace = true, features = ["library"] }
 hyperlane-types       = { workspace = true }
 hyperlane-va          = { workspace = true, features = ["library"] }
 pyth-types            = { workspace = true }
 serde                 = { workspace = true }
-
-[dev-dependencies]
-bip32       = { workspace = true }
-hex         = { workspace = true }
-hex-literal = { workspace = true }
-home        = { workspace = true }
-rand        = { workspace = true }
