--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -314,6 +314,11 @@ jobs:
         run: |
           cd deploy
           pipx ensurepath
+          # TODO: Make sure we only deploy on devnet
+          ansible-playbook reset-cometbft.yml
+          ansible-playbook reset-dango.yml
+          ansible-playbook cometbft.yml
+          ansible-playbook dango.yml --tags setup
           ansible-playbook dango.yml \
             --skip-tags setup \
             -e dango_image_tag=${{ env.GIT_COMMIT }} \
