--- a/.github/workflows/cometbft.yaml
+++ b/.github/workflows/cometbft.yaml
@@ -11,11 +11,11 @@ on:
   push:
     branches: [main]
     paths:
-      - ".github/workflows/cometbft.yml"
+      - ".github/workflows/cometbft.yaml"
   pull_request:
     branches: [main]
     paths:
-      - ".github/workflows/cometbft.yml"
+      - ".github/workflows/cometbft.yaml"
 
 jobs:
   check-image:
