--- a/.github/workflows/cometbft.yaml
+++ b/.github/workflows/cometbft.yaml
@@ -10,8 +10,12 @@ env:
 on:
   push:
     branches: [main]
+    paths:
+      - ".github/workflows/cometbft.yaml"
   pull_request:
     branches: [main]
+    paths:
+      - ".github/workflows/cometbft.yaml"
 
 jobs:
   check-image:
