--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -288,6 +288,11 @@ jobs:
     runs-on: [self-hosted]
     env:
       DANGO_DB_PASSWORD: ${{ secrets.DANGO_DB_PASSWORD }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      COMETBFT_NODE_KEY: ${{ secrets.COMETBFT_NODE_KEY }}
+      COMETBFT_VALIDATOR_ADDRESS: ${{ secrets.COMETBFT_VALIDATOR_ADDRESS }}
+      COMETBFT_VALIDATOR_PUB_KEY: ${{ secrets.COMETBFT_VALIDATOR_PUB_KEY }}
+      COMETBFT_VALIDATOR_PRIVATE_KEY: ${{ secrets.COMETBFT_VALIDATOR_PRIVATE_KEY }}
     steps:
       - uses: actions/checkout@v4
       - name: Check DEPLOY_KEY is set
