Fix binding to tailscale IP only

--- a/deploy/cometbft.yml
+++ b/deploy/cometbft.yml
@@ -6,6 +6,8 @@
     COMETBFT_VALIDATOR_ADDRESS: "{{ lookup('env','COMETBFT_VALIDATOR_ADDRESS') }}"
     COMETBFT_VALIDATOR_PUB_KEY: "{{ lookup('env','COMETBFT_VALIDATOR_PUB_KEY') }}"
     COMETBFT_VALIDATOR_PRIVATE_KEY: "{{ lookup('env','COMETBFT_VALIDATOR_PRIVATE_KEY') }}"
+    tailscale_iface: tailscale0
+    tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
   collections:
     - community.docker
   roles:
