--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -207,8 +207,8 @@ jobs:
 
       - name: Set GIT_COMMIT
         run: |
-          cp grug/types/src/lib.rs grug/types/src/lib.rs.in
-          sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" grug/types/src/lib.rs.in > grug/types/src/lib.rs
+          cp grug/types/src/git_info.rs grug/types/src/git_info.rs.in
+          sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" grug/types/src/git_info.rs.in > grug/types/src/git_info.rs
           rm grug/types/src/git_info.rs.in
 
       - uses: docker/setup-buildx-action@v3
