--- a/.github/workflows/faucet.yml
+++ b/.github/workflows/faucet.yml
@@ -17,6 +17,7 @@ jobs:
       GITHUB_USER: ${{ github.actor }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - uses: actions/checkout@v4
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
