--- a/.github/workflows/faucet.yml
+++ b/.github/workflows/faucet.yml
@@ -27,16 +27,15 @@ jobs:
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-      - name: Install Ansible & Docker SDK
+      - name: Install Ansible
         run: |
           pipx install ansible
           pipx ensurepath
           ln -f -s ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
           ln -sf ~/.local/pipx/venvs/ansible/bin/ansible-playbook ~/.local/bin/ansible-playbook
-          cd deploy
-          ansible-galaxy collection install -r requirements.yml
       - name: Run Ansible playbook
         run: |
           cd deploy
           pipx ensurepath
+          ansible-galaxy collection install -r requirements.yml
           ansible-playbook bots.yml
