add initial test for bitcoin

--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -48,6 +48,7 @@ criterion             = { workspace = true }
 dango-account-factory = { workspace = true, features = ["library"] }
 dango-auth            = { workspace = true }
 dango-bank            = { workspace = true, features = ["library"] }
+dango-bitcoin         = { workspace = true }
 dango-gateway         = { workspace = true, features = ["library"] }
 dango-httpd           = { workspace = true }
 dango-lending         = { workspace = true, features = ["library"] }
